 * Tabs now display an alert icon if the underlying file is unwritable (Delisa Mason)
 * Browser bar URL field now supports project-relative paths (Delisa Mason)
 * URLs can be opened in the internal browser or the OS-default based on preferences (Delisa Mason)
 * Syntax checking and declarations for groovy (Delisa Mason)
 * Draw an overlay if the margin is shown and the OS permits (Textmate-style), else draw a line (Tim Felgentreff)
 * Syntax checking for javascript (Delisa Mason)

Bug fixes:

 * Declarations Plugin is able to deal with similarly named ruby methods
 * Fix Application::Dialog#tool_tip to set the location correctly on Windows (Patrik Sundberg)
 * 64bit Soylatte JDK7 can now be used to run Redcar on Mac OS X
 * Run Tab now checks for underlying file (Delisa Mason)
 * Hovering on annotations only displays the tooltip(s) under the cursor, not all of them (Delisa Mason)

Internal changes:

  * Code coverage is above 70% (up from 60%) (everyone)
  * Code cleanup and refactoring in various plugins (everyone)
  * Speedbar can now contain sliders (Tim Felgentreff)

Version 0.8.1 (26 October 2010)
===============================

 * Replace all is a single undo operation (Steven Hancock)
 * Remove files with multi-byte names from the gem so windows rubygems is happy (Dan Lucraft)

Version 0.8 (26 October 2010)
=============================

Enhancements:

 * Alternate Runnables File Runner command and shortcut (Delisa Mason)
 * File runners now have access to line number and file names (Delisa Mason)
 * Projects can have 'subproject' windows which share config files like Runnables (Delisa Mason)
 * Symlinks to other directories are searched recursively (Tim Felgentreff)
 * Redcar can be started without opening a window (for boot-time startup) (Tim Felgentreff)
 * The Mac OS X app bundle comes with assets bundled (Tim Felgentreff)
 * The Runnables tree now nests runnables depending on slashes in the type definition (Tim Felgentreff)